[package]
name = "eww_hypr_config"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-recursion = "1.0.0"
clap = { version = "4.0.30", features = ["derive"] }
hyprland = "0.2.4"
tokio = { version = "1.23.0", features = ["full"] }
