[package]
name = "cottonwood"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "cottonwood"


[dependencies]
async-recursion = "1.0.0"
clap = { version = "4.0.30", features = ["derive"] }
hyprland = "0.2.4"
strum_macros = "0.24.3"
tokio = { version = "1.23.0", features = ["full"] }
